--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Kanon's Resume</title>
     </head>
     <body>
-        <div id="root"></div>
+        <div id="root" class="w-full absolute top-2"></div>
         <script type="module" src="/src/main.tsx"></script>
     </body>
 </html>
