--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
         <link rel="icon" type="image" href="/icon.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Kanon's Resume</title>
+        <meta name="description" content="Kanonのレジュメです。" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta property="og:title" content="Kanon's Resume" />
+        <meta property="og:url" content="https://resume-7ab37.web.app/" />
+        <meta property="og:description" content="Kanonのレジュメです。" />
+        <meta property="og:site_name" content="Kanon's Resume" />
+        <meta property="og:type" content="website" />
+        <meta property="og:image" content="/twittercard.png" />
     </head>
     <body>
         <div id="root" class="w-full absolute top-2"></div>
