記事投稿数をグラフで見られるように
Signed-off-by: ysknsid25 <kengo071225@gmail.com>

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <meta property="og:description" content="Kanonのレジュメです。" />
         <meta property="og:site_name" content="Kanon's Resume" />
         <meta property="og:type" content="website" />
-        <meta property="og:image" content="/twittercard.png" />
+        <meta property="og:image" content="https://resume-7ab37.web.app/twittercard.png" />
     </head>
     <body>
         <div id="root" class="w-full absolute top-2"></div>
