fix repack setting
Signed-off-by: ysknsid25 <kengo071225@gmail.com>

--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     </head>
     <body>
         <div id="root" class="w-full absolute top-2"></div>
+        <script type="module" src="/src/main.tsx"></script>
     </body>
 </html>
